--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>ViewRoadmap</title>
-    </head>
-    <body>
-        Hello, world!
-    </body>
+	<head>
+		<title>ViewRoadmap</title>
+	</head>
+	<body>
+		<table width="100%">
+			<th>Name</th>
+			<th>Assignees</th>
+			<th>Version</th>
+			<th>Status</th>
+			<th>Priority</th>
+			
+			<tr>
+				<td>Unnamed feature</td>
+				<td></td>
+				<td></td>
+				<td>Pending</td>
+				<td>Normal</td>
+			</tr>
+		</table>
+	
+		<script>
+			document.roadmap = {
+				providers: {}
+			};
+			
+			function getQuery(name) {
+				return Object.fromEntries(new URLSearchParams(window.location.search).entries())[name];
+			}
+		</script>
+		<script src="js/github.js"></script>
+		
+		<script>
+			let providerName = getQuery("provider");
+			if (!providerName) providerName = "github";
+		
+			if (Object.keys(document.roadmap.providers).includes(providerName)) {
+				const provider = document.roadmap.providers[providerName];
+				
+				provider.getRoadmap("AceKiron", "PronounMC").then((res) => {
+					res.features.forEach((feature) => {
+						if (!feature.name) feature.name = "Unnamed feature";
+						if (!feature.status) feature.status = "pending";
+						if (!feature.assignees) feature.assignees = [];
+						if (!feature.version) feature.version = "";
+						if (!feature.priority) feature.priority = "normal";
+						
+						//alert(JSON.stringify(feature));
+					});
+				});
+			} else {
+				// Provider wasn't found
+			}
+		</script>
+	</body>
 </html>
